fixed z-index

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -15,7 +15,6 @@
   );
   border: 2px solid red;
   padding-bottom: 100px;
-  z-index: 0;
 }
 
 .contentWrapper {
