--- a/src/routes/RegistrationRoute/RegistrationRoute.module.scss
+++ b/src/routes/RegistrationRoute/RegistrationRoute.module.scss
@@ -12,5 +12,4 @@
   min-height: 100%;
   position: absolute;
   width: 100%;
-  z-index: -1;
 }
